--- a/pinout.ioc
+++ b/pinout.ioc
@@ -4,24 +4,38 @@ KeepUserPlacement=false
 Mcu.Family=STM32F0
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=USART2
-Mcu.IP4=USB
-Mcu.IP5=USB_DEVICE
-Mcu.IPNb=6
+Mcu.IP2=SPI1
+Mcu.IP3=SYS
+Mcu.IP4=TIM3
+Mcu.IP5=TIM16
+Mcu.IP6=USART2
+Mcu.IP7=USB
+Mcu.IP8=USB_DEVICE
+Mcu.IPNb=9
 Mcu.Name=STM32F042F6Px
 Mcu.Package=TSSOP20
-Mcu.Pin0=PA1
-Mcu.Pin1=PA2
-Mcu.Pin2=PA3
-Mcu.Pin3=PA11
-Mcu.Pin4=PA12
-Mcu.Pin5=PA13
-Mcu.Pin6=PA14
-Mcu.Pin7=VP_SYS_VS_PINREMAP
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.Pin9=VP_USB_DEVICE_VS_USB_DEVICE_DFU_FS
-Mcu.PinsNb=10
+Mcu.Pin0=PF0-OSC_IN
+Mcu.Pin1=PF1-OSC_OUT
+Mcu.Pin10=PB1
+Mcu.Pin11=PA11
+Mcu.Pin12=PA12
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=VP_RCC_USB
+Mcu.Pin16=VP_SYS_VS_PINREMAP
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin19=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin2=PA0
+Mcu.Pin20=VP_USB_DEVICE_VS_USB_DEVICE_DFU_FS
+Mcu.Pin3=PA1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA4
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=21
 Mcu.UserConstants=
 Mcu.UserName=STM32F042F6Px
 MxCube.Version=4.15.1
@@ -32,6 +46,8 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
 NVIC.USB_IRQn=true\:0\:0\:false\:false\:true
+PA0.Locked=true
+PA0.Signal=GPIO_Input
 PA1.Mode=Hardware Flow Control (RS485)
 PA1.Signal=USART2_DE
 PA11.Mode=Device
@@ -46,6 +62,16 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA4.Locked=true
+PA4.Signal=GPIO_Output
+PA5.Mode=TX_Only_Simplex_Unidirect_Master
+PA5.Signal=SPI1_SCK
+PA6.Locked=true
+PA6.Signal=S_TIM16_CH1
+PA7.Mode=TX_Only_Simplex_Unidirect_Master
+PA7.Signal=SPI1_MOSI
+PB1.Locked=true
+PB1.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F0x2
 PCC.MCU=STM32F042F6Px
@@ -55,6 +81,10 @@ PCC.Seq0=0
 PCC.Series=STM32F0
 PCC.Temperature=25
 PCC.Vdd=3.6
+PF0-OSC_IN.Mode=HSE-External-Oscillator
+PF0-OSC_IN.Signal=RCC_OSC_IN
+PF1-OSC_OUT.Mode=HSE-External-Oscillator
+PF1-OSC_OUT.Signal=RCC_OSC_OUT
 RCC.CECFreq_Value=32786.88524590164
 RCC.FamilyName=M
 RCC.HSICECFreq_Value=32786.88524590164
@@ -62,13 +92,24 @@ RCC.IPParameters=CECFreq_Value,FamilyName,HSICECFreq_Value,PLLCLKFreq_Value,TimS
 RCC.PLLCLKFreq_Value=16000000
 RCC.TimSysFreq_Value=8000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.S_TIM16_CH1.0=TIM16_CH1,PWM Generation1 CH1
+SH.S_TIM16_CH1.ConfNb=1
+SPI1.CalculateBaudRate=4.0 MBits/s
+SPI1.IPParameters=Mode,CalculateBaudRate
+SPI1.Mode=SPI_MODE_MASTER
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,USBD_HandleTypeDef
 USB_DEVICE.USBD_HandleTypeDef=hUsbDeviceFS
 USB_DEVICE.VirtualMode=Dfu
 USB_DEVICE.VirtualModeFS=Dfu_FS
+VP_RCC_USB.Mode=CRS SYNC Source USB
+VP_RCC_USB.Signal=RCC_USB
 VP_SYS_VS_PINREMAP.Mode=PINREMAP
 VP_SYS_VS_PINREMAP.Signal=SYS_VS_PINREMAP
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM16_VS_ClockSourceINT.Signal=TIM16_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_DFU_FS.Mode=DFU_FS
 VP_USB_DEVICE_VS_USB_DEVICE_DFU_FS.Signal=USB_DEVICE_VS_USB_DEVICE_DFU_FS
