--- a/test/test/test.ioc
+++ b/test/test/test.ioc
@@ -11,10 +11,12 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SPI1
 Mcu.IP4=SYS
-Mcu.IP5=USART2
-Mcu.IP6=USB
-Mcu.IP7=USB_DEVICE
-Mcu.IPNb=8
+Mcu.IP5=TIM3
+Mcu.IP6=TIM17
+Mcu.IP7=USART2
+Mcu.IP8=USB
+Mcu.IP9=USB_DEVICE
+Mcu.IPNb=10
 Mcu.Name=STM32F042F6Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PF0-OSC_IN
@@ -28,8 +30,10 @@ Mcu.Pin15=VP_FREERTOS_VS_ENABLE
 Mcu.Pin16=VP_RCC_USB
 Mcu.Pin17=VP_SYS_VS_PINREMAP
 Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin19=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PA0
+Mcu.Pin20=VP_TIM17_VS_ClockSourceINT
+Mcu.Pin21=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
@@ -37,7 +41,7 @@ Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=20
+Mcu.PinsNb=22
 Mcu.UserConstants=
 Mcu.UserName=STM32F042F6Px
 MxCube.Version=4.17.0
@@ -48,6 +52,8 @@ NVIC.PendSV_IRQn=true\:3\:0\:false\:false\:false\:true
 NVIC.SPI1_IRQn=true\:3\:0\:false\:false\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:true
+NVIC.TIM17_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.USB_IRQn=true\:3\:0\:false\:false\:true\:true
 PA0.Locked=true
 PA0.Signal=GPIO_Input
@@ -71,14 +77,15 @@ PA4.Locked=true
 PA4.Signal=GPIO_Output
 PA5.Mode=TX_Only_Simplex_Unidirect_Master
 PA5.Signal=SPI1_SCK
+PA6.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
+PA6.GPIO_Label=SPI_DE
+PA6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PA6.Locked=true
 PA6.Signal=GPIO_Output
 PA7.Mode=TX_Only_Simplex_Unidirect_Master
 PA7.Signal=SPI1_MOSI
-PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=SPI_DE
 PB1.Locked=true
-PB1.Signal=GPIO_Output
+PB1.Signal=GPIO_Input
 PCC.Checker=false
 PCC.Line=STM32F0x2
 PCC.MCU=STM32F042F6Px
@@ -114,7 +121,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=C\:\\git\\usb-rs485\\test\\test
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_SPI1_Init-SPI1-false-HAL,4-MX_USART2_UART_Init-USART2-false-HAL,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_SPI1_Init-SPI1-false-HAL,4-MX_USART2_UART_Init-USART2-false-HAL,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,6-MX_TIM17_Init-TIM17-false-HAL,7-MX_TIM3_Init-TIM3-false-HAL
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -123,19 +130,29 @@ RCC.FCLKCortexFreq_Value=48000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=48000000
 RCC.HSICECFreq_Value=32786.88524590164
+RCC.HSIState=RCC_HSI_ON
 RCC.I2SFreq_Value=48000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSICECFreq_Value,I2SFreq_Value,PLLCLKFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,VCOOutput2Freq_Value
-RCC.PLLCLKFreq_Value=16000000
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSICECFreq_Value,HSIState,I2SFreq_Value,PLLCLKFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,USBClockSelection,VCOOutput2Freq_Value
+RCC.PLLCLKFreq_Value=48000000
+RCC.PLLMUL=RCC_PLL_MUL6
 RCC.SYSCLKFreq_VALUE=48000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSI48
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
+RCC.USBClockSelection=RCC_USBCLKSOURCE_PLL
 RCC.VCOOutput2Freq_Value=8000000
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
 SPI1.CalculateBaudRate=750.0 KBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.IPParameters=Mode,CalculateBaudRate,BaudRatePrescaler,DataSize
 SPI1.Mode=SPI_MODE_MASTER
+TIM17.IPParameters=Prescaler,Period
+TIM17.Period=1
+TIM17.Prescaler=48
+TIM3.CounterMode=TIM_COUNTERMODE_DOWN
+TIM3.IPParameters=CounterMode,Prescaler,Period
+TIM3.Period=1000
+TIM3.Prescaler=48000
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,USBD_HandleTypeDef,CLASS_NAME_FS
 USB_DEVICE.USBD_HandleTypeDef=hUsbDeviceFS
@@ -149,6 +166,10 @@ VP_SYS_VS_PINREMAP.Mode=PINREMAP
 VP_SYS_VS_PINREMAP.Signal=SYS_VS_PINREMAP
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM17_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM17_VS_ClockSourceINT.Signal=TIM17_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=test
