--- a/test/test/test.ioc
+++ b/test/test/test.ioc
@@ -1,21 +1,18 @@
 #MicroXplorer Configuration settings - do not modify
-FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
-FREERTOS.configTOTAL_HEAP_SIZE=1300
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F0
-Mcu.IP0=FREERTOS
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
-Mcu.IP5=TIM3
-Mcu.IP6=TIM17
-Mcu.IP7=USART2
-Mcu.IP8=USB
-Mcu.IP9=USB_DEVICE
-Mcu.IPNb=10
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
+Mcu.IP2=SPI1
+Mcu.IP3=SYS
+Mcu.IP4=TIM3
+Mcu.IP5=TIM17
+Mcu.IP6=USART2
+Mcu.IP7=USB
+Mcu.IP8=USB_DEVICE
+Mcu.IPNb=9
 Mcu.Name=STM32F042F6Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PF0-OSC_IN
@@ -25,14 +22,13 @@ Mcu.Pin11=PA11
 Mcu.Pin12=PA12
 Mcu.Pin13=PA13
 Mcu.Pin14=PA14
-Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin16=VP_RCC_USB
-Mcu.Pin17=VP_SYS_VS_PINREMAP
-Mcu.Pin18=VP_SYS_VS_tim14
-Mcu.Pin19=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin15=VP_RCC_USB
+Mcu.Pin16=VP_SYS_VS_PINREMAP
+Mcu.Pin17=VP_SYS_VS_tim14
+Mcu.Pin18=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin19=VP_TIM17_VS_ClockSourceINT
 Mcu.Pin2=PA0
-Mcu.Pin20=VP_TIM17_VS_ClockSourceINT
-Mcu.Pin21=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin20=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
@@ -40,28 +36,25 @@ Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=22
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042F6Px
 MxCube.Version=6.4.0
 MxDb.Version=DB.6.0.40
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.PendSV_IRQn=true\:3\:0\:false\:false\:false\:true\:true\:false
-NVIC.SPI1_IRQn=true\:3\:0\:false\:false\:true\:true\:true\:true
-NVIC.SVC_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false
-NVIC.SavedPendsvIrqHandlerGenerated=true
-NVIC.SavedSvcallIrqHandlerGenerated=true
-NVIC.SavedSystickIrqHandlerGenerated=true
-NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:false\:true\:true\:true
-NVIC.TIM14_IRQn=true\:3\:0\:false\:false\:true\:false\:false\:true
-NVIC.TIM17_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:true
-NVIC.TIM3_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:true\:true
+NVIC.TIM14_IRQn=true\:3\:0\:false\:false\:true\:false\:true
+NVIC.TIM17_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TimeBase=TIM14_IRQn
 NVIC.TimeBaseIP=TIM14
-NVIC.USB_IRQn=true\:3\:0\:false\:false\:true\:true\:true\:true
+NVIC.USB_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA0.Locked=true
 PA0.Signal=GPIO_Input
 PA1.Mode=Hardware Flow Control (RS485)
@@ -169,8 +162,6 @@ USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,USBD_HandleTypeDef,CLASS_NAME_
 USB_DEVICE.USBD_HandleTypeDef=hUsbDeviceFS
 USB_DEVICE.VirtualMode=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
-VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
-VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_RCC_USB.Mode=CRS SYNC Source USB
 VP_RCC_USB.Signal=RCC_USB
 VP_SYS_VS_PINREMAP.Mode=PINREMAP
