--- a/test/test/test.ioc
+++ b/test/test/test.ioc
@@ -9,34 +9,30 @@ Mcu.IP2=SPI1
 Mcu.IP3=SYS
 Mcu.IP4=TIM3
 Mcu.IP5=TIM17
-Mcu.IP6=USART2
-Mcu.IP7=USB
-Mcu.IP8=USB_DEVICE
-Mcu.IPNb=9
+Mcu.IP6=USB
+Mcu.IP7=USB_DEVICE
+Mcu.IPNb=8
 Mcu.Name=STM32F042F6Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PF1-OSC_OUT
-Mcu.Pin10=PB1
-Mcu.Pin11=PA11
-Mcu.Pin12=PA12
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=VP_RCC_USB
-Mcu.Pin16=VP_SYS_VS_PINREMAP
-Mcu.Pin17=VP_SYS_VS_tim14
-Mcu.Pin18=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin19=VP_TIM17_VS_ClockSourceINT
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14
+Mcu.Pin12=VP_RCC_USB
+Mcu.Pin13=VP_SYS_VS_PINREMAP
+Mcu.Pin14=VP_SYS_VS_tim14
+Mcu.Pin15=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM17_VS_ClockSourceINT
+Mcu.Pin17=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin2=PA0
-Mcu.Pin20=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin3=PA1
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA4
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=21
+Mcu.Pin3=PA4
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
+Mcu.Pin7=PB1
+Mcu.Pin8=PA11
+Mcu.Pin9=PA12
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042F6Px
@@ -57,8 +53,6 @@ NVIC.TimeBaseIP=TIM14
 NVIC.USB_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA0.Locked=true
 PA0.Signal=GPIO_Input
-PA1.Mode=Hardware Flow Control (RS485)
-PA1.Signal=USART2_DE
 PA11.Mode=Device
 PA11.Signal=USB_DM
 PA12.Mode=Device
@@ -67,10 +61,6 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_SWCLK
-PA2.Mode=Asynchronous
-PA2.Signal=USART2_TX
-PA3.Mode=Asynchronous
-PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=SPI_LATCH
 PA4.Locked=true
@@ -118,7 +108,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM17_Init-TIM17-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM17_Init-TIM17-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -152,14 +142,13 @@ TIM3.CounterMode=TIM_COUNTERMODE_DOWN
 TIM3.IPParameters=CounterMode,Prescaler,Period
 TIM3.Period=1000
 TIM3.Prescaler=48000
-USART2.IPParameters=VirtualMode-Asynchronous,VirtualMode-Hardware Flow Control (RS485)
-USART2.VirtualMode-Asynchronous=VM_ASYNC
-USART2.VirtualMode-Hardware\ Flow\ Control\ (RS485)=VM_ASYNC
-USB_DEVICE.APP_RX_DATA_SIZE=512
-USB_DEVICE.APP_TX_DATA_SIZE=512
+USB_DEVICE.APP_RX_DATA_SIZE=896
+USB_DEVICE.APP_TX_DATA_SIZE=896
 USB_DEVICE.CLASS_NAME_FS=CDC
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,USBD_HandleTypeDef,CLASS_NAME_FS,APP_RX_DATA_SIZE,APP_TX_DATA_SIZE
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,USBD_HandleTypeDef,CLASS_NAME_FS,APP_RX_DATA_SIZE,APP_TX_DATA_SIZE,USBD_MAX_STR_DESC_SIZ,USBD_SELF_POWERED
 USB_DEVICE.USBD_HandleTypeDef=hUsbDeviceFS
+USB_DEVICE.USBD_MAX_STR_DESC_SIZ=20
+USB_DEVICE.USBD_SELF_POWERED=0
 USB_DEVICE.VirtualMode=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
 VP_RCC_USB.Mode=CRS SYNC Source USB
